--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --mode default",
     "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore .",
-    "prepare": "husky"
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
