--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -5,65 +5,10 @@ on:
 
 
 jobs:
-  build:
-    runs-on: builder
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3.2.0
-      - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@v3.6.1
-      - name: Docker Login
-        uses: docker/login-action@v3.3.0
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Create .env file
-        run: |
-          echo "ADMIN_ID=${{ secrets.ADMIN_ID }}" >> .env
-          echo "TELEGRAM_API_TOKEN=${{ secrets.TELEGRAM_API_TOKEN }}" >> .env
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
-          echo "ANSWER_STRATEGY=${{ vars.ANSWER_STRATEGY }}" >> .env
-          echo "BOT_WELCOME_MESSAGE=${{ vars.BOT_WELCOME_MESSAGE }}" >> .env
-          echo "ERROR_APP_NAME=${{ vars.ERROR_APP_NAME }}" >> .env
-          echo "FAQ_TXT_LOCATION=${{ vars.FAQ_TXT_LOCATION }}" >> .env
-          echo "ALERT_CHANNEL_ID=${{ vars.TG_HEALTH_CHECK_ALERT_CHANNEL_ID }}" >> .env
-          echo "MESSAGE_THREAD_ID=${{ vars.TG_HEALTH_CHECK_MESSAGE_THREAD_ID }}" >> .env
-          echo "BOT_INSTRUCTIONS=${{ vars.BOT_INSTRUCTIONS }}" >> .env
-          echo '${{ secrets.GOOGLE_SHEETS_SERVICE_ACCOUNT_KEY }}' >> itmo-chatbot-google-sheets-service-account-key.json
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v6.5.0
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:stable
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  prepare-environment:
-    runs-on: production
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-      - name: Create .env file
-        run: |
-          echo "ADMIN_ID=${{ secrets.ADMIN_ID }}" >> .env
-          echo "TELEGRAM_API_TOKEN=${{ secrets.TELEGRAM_API_TOKEN }}" >> .env
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
-          echo "ANSWER_STRATEGY=${{ vars.ANSWER_STRATEGY }}" >> .env
-          echo "BOT_WELCOME_MESSAGE=${{ vars.BOT_WELCOME_MESSAGE }}" >> .env
-          echo "ERROR_APP_NAME=${{ vars.ERROR_APP_NAME }}" >> .env
-          echo "FAQ_TXT_LOCATION=${{ vars.FAQ_TXT_LOCATION }}" >> .env
-          echo "ALERT_CHANNEL_ID=${{ vars.TG_HEALTH_CHECK_ALERT_CHANNEL_ID }}" >> .env
-          echo "MESSAGE_THREAD_ID=${{ vars.TG_HEALTH_CHECK_MESSAGE_THREAD_ID }}" >> .env
-          echo "BOT_INSTRUCTIONS=${{ vars.BOT_INSTRUCTIONS }}" >> .env
-          echo '${{ secrets.GOOGLE_SHEETS_SERVICE_ACCOUNT_KEY }}' >> itmo-chatbot-google-sheets-service-account-key.json
-
   deploy:
-    runs-on: production
-    needs: [build, prepare-environment]
+    runs-on: self-hosted
     steps:
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
-      - name: Pull Docker image
-        run: docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:stable
+      - name: Create .env file
+        run: echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> .env
       - name: Run Docker Compose
-        run: docker compose --profile production up -d
+        run: docker compose up -d --build
