--- a/compose.yaml
+++ b/compose.yaml
@@ -2,20 +2,18 @@
 services:
   frontend:
     image: 'legal-ai-frontend:latest'
-    network_mode: "host"
     restart: always
     ports:
       - "5173:5173"
     build:
       context: frontend
       dockerfile: Dockerfile
-    environment:
-      VITE_API_HOST: 'http://localhost:80'
+    env_file:
+      - .env
 
   backend:
     image: 'legal-ai-backend:latest'
     restart: always
-    network_mode: "host"
     ports:
       - "80:80"
     env_file:
