--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ pydantic-settings = "^2.6.0"
 toml = "^0.10.2"
 uvicorn = "^0.32.0"
 python-dotenv = "^1.0.1"
+langchain-community = "^0.3.7"
+faiss-cpu = "^1.9.0"
 
 
 [build-system]
