--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,11 @@ uvicorn = "^0.32.0"
 python-dotenv = "^1.0.1"
 langchain-community = "^0.3.7"
 faiss-cpu = "^1.9.0"
+langchain-mistralai = "^0.2.4"
+chromadb = "^0.5.23"
+tqdm = "^4.67.1"
+langchain-chroma = "^0.1.4"
+langchain-huggingface = "^0.1.2"
 
 
 [build-system]
