--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,17 +18,20 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@hotjar/browser": "1.0.9",
+    "@hotjar/browser": "^1.0.9",
     "@langchain/core": "0.2.18",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-toast": "1.2.1",
     "@reduxjs/toolkit": "2.2.7",
+    "@shadcn/ui": "^0.0.4",
     "@zxing/library": "0.21.3",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "embla-carousel-react": "8.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-markdown": "9.0.1",
     "react-media-recorder": "1.7.1",
     "react-redux": "9.1.2",
@@ -53,7 +56,7 @@
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animation-delay": "2.0.1",
     "typescript": "5.4.5",
     "vite": "5.4.6",
